src/objects/Drug_Product_Name__c.object
<CustomObject>
    <description>ESPSFDCQI-12898: This object stores drug records linked to an opportunity.</description>
    <fields>
        <fullName>Drug_Product__c</fullName>
        <description>ESPSFDCQI-12898</description>
        <label>Drug Product</label>
        <referenceTo>Drug_Product__c</referenceTo>
        <relationshipName>Opportunity_Drug_Products</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>ESPSFDCQI-12898:To identify Duplicate record (Opportunity__c + &apos;-&apos; + Drug_Product__c)</description>
        <externalId>true</externalId>
        <label>External Key</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>ESPSFDCQI-12898</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Opportunity_Drug_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Drug/Product Name</label>
    <nameField>
        <displayFormat>ODC-{000000}</displayFormat>
        <label>Opportunity Drug Classification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drug/Product Name</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>